test/types/sync/vass/ref-sync-3.good
ref-sync-3.chpl:5: error: unresolved call 'MYPROC(_syncvar(int(64)))'
ref-sync-3.chpl:7: note: this candidate did not match: MYPROC(ref FORMAL: real)
ref-sync-3.chpl:5: note: because call actual argument #1 with type _syncvar(int(64))
ref-sync-3.chpl:7: note: is passed to formal 'ref FORMAL: real(64)'
